--- a/4/resources/Admin.fxml
+++ b/4/resources/Admin.fxml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.TextFlow?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.admin.AdminController">
    <children>
       <TableView fx:id="topicsTable" layoutX="17.0" layoutY="16.0" prefHeight="238.0" prefWidth="136.0" />
-      <Button fx:id="saveSubscriptionsButton" layoutX="17.0" layoutY="254.0" mnemonicParsing="false" onAction="#saveSubscriptions" text="Save" />
-      <ScrollPane fx:id="articlesMainPane" layoutX="167.0" layoutY="17.0" prefHeight="362.0" prefWidth="411.0">
+      <Button fx:id="saveSubscriptionsButton" layoutX="17.0" layoutY="254.0" mnemonicParsing="false" onAction="#save" text="Save" />
+      <ScrollPane fx:id="articlesMainPane" layoutX="166.0" layoutY="63.0" prefHeight="311.0" prefWidth="411.0">
          <content>
-            <TextFlow fx:id="articlesTextFlow" prefHeight="360.0" prefWidth="426.0">
-               <padding>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-               </padding>
-            </TextFlow>
+            <TextArea fx:id="articleInputTextArea" prefHeight="310.0" prefWidth="409.0" />
          </content>
       </ScrollPane>
       <Button fx:id="refreshButton" layoutX="40.0" layoutY="348.0" mnemonicParsing="false" onAction="#refresh" text="Refresh" />
       <Button fx:id="addTopicButton" layoutX="62.0" layoutY="254.0" mnemonicParsing="false" onAction="#addTopic" text="Add Topic" />
       <Button layoutX="17.0" layoutY="287.0" mnemonicParsing="false" onAction="#removeSelectedTopics" text="Remove Selected" />
+      <ComboBox fx:id="topicsComboBox" layoutX="427.0" layoutY="27.0" prefWidth="150.0" promptText="Topic" />
+      <Label layoutX="172.0" layoutY="29.0" text="Add an article">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
